// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component fixtures applyModification fixture_1 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
export default function SimpleJSX() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrappedJsxEl
  */
  1);
  let _unwrappedJsxEl = _$unforgetCache[0].v;
  if (_$unforgetCache[0].n) {
    _unwrappedJsxEl = <p>Hello world!</p>;
    _$unforgetCache[0].e(_unwrappedJsxEl);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl;
}"
`;

exports[`Component fixtures applyModification fixture_2 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
const SimpleJSXWithArrowFunction = () => {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrappedJsxEl
  */
  1);
  let _unwrappedJsxEl = _$unforgetCache[0].v;
  if (_$unforgetCache[0].n) {
    _unwrappedJsxEl = <div>Hello world!</div>;
    _$unforgetCache[0].e(_unwrappedJsxEl);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl;
};
export default SimpleJSXWithArrowFunction;"
`;

exports[`Component fixtures applyModification fixture_3 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
const SimpleJSXWithFunctionExpression = function () {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrappedJsxEl
  */
  1);
  let _unwrappedJsxEl = _$unforgetCache[0].v;
  if (_$unforgetCache[0].n) {
    _unwrappedJsxEl = <div>Hello world!</div>;
    _$unforgetCache[0].e(_unwrappedJsxEl);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl;
};
export default SimpleJSXWithFunctionExpression;"
`;

exports[`Component fixtures applyModification fixture_4 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
export default function Counter() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrapped
  1 => state
  2 => setState
  3 => _unwrappedJsxEl
  4 => _unwrappedJsxEl2
  5 => _unwrappedJsxEl3
  6 => _unwrappedJsxEl4
  7 => _unwrappedJsxEl5
  */
  8);
  let _unwrapped = _$unforgetCache[0].v;
  _unwrapped = useState(0);
  _$unforgetCache[0].e(_unwrapped);
  let state = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n || _unwrapped !== _$unforgetCache[0].v) {
    state = _unwrapped[0];
    _$unforgetCache[1].e(state);
  }
  let setState = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _unwrapped !== _$unforgetCache[0].v) {
    setState = _unwrapped[1];
    _$unforgetCache[2].e(setState);
  }
  let _unwrappedJsxEl = _$unforgetCache[3].v;
  if (_$unforgetCache[3].n || setState !== _$unforgetCache[2].v || state !== _$unforgetCache[1].v) {
    _unwrappedJsxEl = () => setState(state + 1);
    _$unforgetCache[3].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[4].v;
  if (_$unforgetCache[4].n || _unwrappedJsxEl !== _$unforgetCache[3].v) {
    _unwrappedJsxEl2 = <button onClick={_unwrappedJsxEl}>Increment</button>;
    _$unforgetCache[4].e(_unwrappedJsxEl2);
  }
  let _unwrappedJsxEl3 = _$unforgetCache[5].v;
  if (_$unforgetCache[5].n || state !== _$unforgetCache[1].v) {
    _unwrappedJsxEl3 = <span data-testid="state-printer">Count: {state}</span>;
    _$unforgetCache[5].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n || _unwrappedJsxEl3 !== _$unforgetCache[5].v) {
    _unwrappedJsxEl4 = <div>
        {_unwrappedJsxEl3}
      </div>;
    _$unforgetCache[6].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl5 = _$unforgetCache[7].v;
  if (_$unforgetCache[7].n || _unwrappedJsxEl2 !== _$unforgetCache[4].v || _unwrappedJsxEl4 !== _$unforgetCache[6].v) {
    _unwrappedJsxEl5 = <div>
      {_unwrappedJsxEl2}
      {_unwrappedJsxEl4}
    </div>;
    _$unforgetCache[7].e(_unwrappedJsxEl5);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl5;
}"
`;

exports[`Component fixtures applyModification fixture_5 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
export default function CounterWithMutationTracking() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrapped
  1 => state
  2 => setState
  3 => text
  4 => _unwrappedJsxEl
  5 => _unwrappedJsxEl2
  6 => _unwrappedJsxEl3
  7 => _unwrappedJsxEl4
  8 => _unwrappedJsxEl5
  */
  9);
  let _unwrapped = _$unforgetCache[0].v;
  _unwrapped = useState(0);
  _$unforgetCache[0].e(_unwrapped);
  let state = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n || _unwrapped !== _$unforgetCache[0].v) {
    state = _unwrapped[0];
    _$unforgetCache[1].e(state);
  }
  let setState = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _unwrapped !== _$unforgetCache[0].v) {
    setState = _unwrapped[1];
    _$unforgetCache[2].e(setState);
  }
  let text = _$unforgetCache[3].v;
  if (_$unforgetCache[3].n || state !== _$unforgetCache[1].v) {
    text = "The number is: ";
    _$unforgetCache[3].e(text);
  }
  if (state !== _$unforgetCache[1].v) {
    if (state % 2 === 0) {
      text += "even";
    } else {
      text += "odd";
    }
  }
  let _unwrappedJsxEl = _$unforgetCache[4].v;
  if (_$unforgetCache[4].n || setState !== _$unforgetCache[2].v || state !== _$unforgetCache[1].v) {
    _unwrappedJsxEl = () => setState(state + 1);
    _$unforgetCache[4].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[5].v;
  if (_$unforgetCache[5].n || _unwrappedJsxEl !== _$unforgetCache[4].v) {
    _unwrappedJsxEl2 = <button onClick={_unwrappedJsxEl}>Increment</button>;
    _$unforgetCache[5].e(_unwrappedJsxEl2);
  }
  let _unwrappedJsxEl3 = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n || state !== _$unforgetCache[1].v) {
    _unwrappedJsxEl3 = <span>Count: {state}</span>;
    _$unforgetCache[6].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache[7].v;
  if (_$unforgetCache[7].n || _unwrappedJsxEl3 !== _$unforgetCache[6].v || text !== _$unforgetCache[3].v) {
    _unwrappedJsxEl4 = <div data-testid="state-printer">
        {_unwrappedJsxEl3} {text}
      </div>;
    _$unforgetCache[7].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl5 = _$unforgetCache[8].v;
  if (_$unforgetCache[8].n || _unwrappedJsxEl2 !== _$unforgetCache[5].v || _unwrappedJsxEl4 !== _$unforgetCache[7].v) {
    _unwrappedJsxEl5 = <div>
      {_unwrappedJsxEl2}
      {_unwrappedJsxEl4}
    </div>;
    _$unforgetCache[8].e(_unwrappedJsxEl5);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl5;
}"
`;

exports[`Component fixtures applyModification fixture_6 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
function InnerComponentWithProps(_props) {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _props
  1 => count
  2 => text
  3 => _unwrappedJsxEl
  4 => _unwrappedJsxEl2
  */
  5);
  _$unforgetCache[0].e(_props);
  let count = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n || _props !== _$unforgetCache[0].v) {
    count = _props.count;
    _$unforgetCache[1].e(count);
  }
  let text = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _props !== _$unforgetCache[0].v) {
    text = _props.text;
    _$unforgetCache[2].e(text);
  }
  let _unwrappedJsxEl = _$unforgetCache[3].v;
  if (_$unforgetCache[3].n || count !== _$unforgetCache[1].v) {
    _unwrappedJsxEl = <span>Count: {count}</span>;
    _$unforgetCache[3].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[4].v;
  if (_$unforgetCache[4].n || _unwrappedJsxEl !== _$unforgetCache[3].v || text !== _$unforgetCache[2].v) {
    _unwrappedJsxEl2 = <div data-testid="state-printer">
      {_unwrappedJsxEl} {text}
    </div>;
    _$unforgetCache[4].e(_unwrappedJsxEl2);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl2;
}
export default function CounterWithInnerComponents() {
  const [_$unforgetCache2, _$unforgetCommit2, _$unforgetNull2] = useCreateCache$unforget(
  /*
  0 => _unwrapped
  1 => state
  2 => setState
  3 => text
  4 => _unwrappedJsxEl3
  5 => _unwrappedJsxEl4
  6 => _unwrappedJsxEl5
  7 => _unwrappedJsxEl6
  */
  8);
  let _unwrapped = _$unforgetCache2[0].v;
  _unwrapped = useState(0);
  _$unforgetCache2[0].e(_unwrapped);
  let state = _$unforgetCache2[1].v;
  if (_$unforgetCache2[1].n || _unwrapped !== _$unforgetCache2[0].v) {
    state = _unwrapped[0];
    _$unforgetCache2[1].e(state);
  }
  let setState = _$unforgetCache2[2].v;
  if (_$unforgetCache2[2].n || _unwrapped !== _$unforgetCache2[0].v) {
    setState = _unwrapped[1];
    _$unforgetCache2[2].e(setState);
  }
  let text = _$unforgetCache2[3].v;
  if (_$unforgetCache2[3].n || state !== _$unforgetCache2[1].v) {
    text = "The number is: ";
    _$unforgetCache2[3].e(text);
  }
  if (state !== _$unforgetCache2[1].v) {
    if (state % 2 === 0) {
      text += "even";
    } else {
      text += "odd";
    }
  }
  let _unwrappedJsxEl3 = _$unforgetCache2[4].v;
  if (_$unforgetCache2[4].n || setState !== _$unforgetCache2[2].v || state !== _$unforgetCache2[1].v) {
    _unwrappedJsxEl3 = () => setState(state + 1);
    _$unforgetCache2[4].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache2[5].v;
  if (_$unforgetCache2[5].n || _unwrappedJsxEl3 !== _$unforgetCache2[4].v) {
    _unwrappedJsxEl4 = <button onClick={_unwrappedJsxEl3}>Increment</button>;
    _$unforgetCache2[5].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl5 = _$unforgetCache2[6].v;
  if (_$unforgetCache2[6].n || state !== _$unforgetCache2[1].v || text !== _$unforgetCache2[3].v) {
    _unwrappedJsxEl5 = <InnerComponentWithProps count={state} text={text} />;
    _$unforgetCache2[6].e(_unwrappedJsxEl5);
  }
  let _unwrappedJsxEl6 = _$unforgetCache2[7].v;
  if (_$unforgetCache2[7].n || _unwrappedJsxEl4 !== _$unforgetCache2[5].v || _unwrappedJsxEl5 !== _$unforgetCache2[6].v) {
    _unwrappedJsxEl6 = <div>
      {_unwrappedJsxEl4}
      {_unwrappedJsxEl5}
    </div>;
    _$unforgetCache2[7].e(_unwrappedJsxEl6);
  }
  _$unforgetCommit2();
  return _unwrappedJsxEl6;
}"
`;

exports[`Component fixtures applyModification fixture_7 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
export default function CounterWithEarlyReturn() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrapped
  1 => state
  2 => setState
  3 => _unwrappedJsxEl6
  4 => _unwrappedJsxEl7
  5 => _unwrappedJsxEl8
  6 => _unwrappedJsxEl
  7 => _unwrappedJsxEl2
  8 => _unwrappedJsxEl3
  9 => _unwrappedJsxEl4
  10 => _unwrappedJsxEl5
  */
  11);
  let _unwrapped = _$unforgetCache[0].v;
  _unwrapped = useState(0);
  _$unforgetCache[0].e(_unwrapped);
  let state = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n || _unwrapped !== _$unforgetCache[0].v) {
    state = _unwrapped[0];
    _$unforgetCache[1].e(state);
  }
  let setState = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _unwrapped !== _$unforgetCache[0].v) {
    setState = _unwrapped[1];
    _$unforgetCache[2].e(setState);
  }
  if (state !== _$unforgetCache[1].v || setState !== _$unforgetCache[2].v) {
    if (state % 2 === 0) {
      let _unwrappedJsxEl6 = _$unforgetCache[3].v;
      if (_$unforgetCache[3].n || setState !== _$unforgetCache[2].v || state !== _$unforgetCache[1].v) {
        _unwrappedJsxEl6 = () => setState(state + 1);
        _$unforgetCache[3].e(_unwrappedJsxEl6);
      }
      let _unwrappedJsxEl7 = _$unforgetCache[4].v;
      if (_$unforgetCache[4].n || _unwrappedJsxEl6 !== _$unforgetCache[3].v) {
        _unwrappedJsxEl7 = <button onClick={_unwrappedJsxEl6}>Increment</button>;
        _$unforgetCache[4].e(_unwrappedJsxEl7);
      }
      let _unwrappedJsxEl8 = _$unforgetCache[5].v;
      if (_$unforgetCache[5].n || _unwrappedJsxEl7 !== _$unforgetCache[4].v) {
        _unwrappedJsxEl8 = <div>
        We're inside the early return
        {_unwrappedJsxEl7}
      </div>;
        _$unforgetCache[5].e(_unwrappedJsxEl8);
      }
      _$unforgetCommit();
      return _unwrappedJsxEl8;
    }
  }
  let _unwrappedJsxEl = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n || setState !== _$unforgetCache[2].v || state !== _$unforgetCache[1].v) {
    _unwrappedJsxEl = () => setState(state + 1);
    _$unforgetCache[6].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[7].v;
  if (_$unforgetCache[7].n || _unwrappedJsxEl !== _$unforgetCache[6].v) {
    _unwrappedJsxEl2 = <button onClick={_unwrappedJsxEl}>Increment</button>;
    _$unforgetCache[7].e(_unwrappedJsxEl2);
  }
  let _unwrappedJsxEl3 = _$unforgetCache[8].v;
  if (_$unforgetCache[8].n || state !== _$unforgetCache[1].v) {
    _unwrappedJsxEl3 = <span>Count: {state}</span>;
    _$unforgetCache[8].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache[9].v;
  if (_$unforgetCache[9].n || _unwrappedJsxEl3 !== _$unforgetCache[8].v) {
    _unwrappedJsxEl4 = <div>
        {_unwrappedJsxEl3}
      </div>;
    _$unforgetCache[9].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl5 = _$unforgetCache[10].v;
  if (_$unforgetCache[10].n || _unwrappedJsxEl2 !== _$unforgetCache[7].v || _unwrappedJsxEl4 !== _$unforgetCache[9].v) {
    _unwrappedJsxEl5 = <div>
      {_unwrappedJsxEl2}
      {_unwrappedJsxEl4}
    </div>;
    _$unforgetCache[10].e(_unwrappedJsxEl5);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl5;
}"
`;

exports[`Component fixtures applyModification fixture_8 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
export default function CounterWithEarlyReturnWithoutDirectlyUsingTheVariableInJSX() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrapped
  1 => state
  2 => setState
  3 => _unwrappedJsxEl6
  4 => newValue
  5 => _unwrappedJsxEl
  6 => _unwrappedJsxEl2
  7 => _unwrappedJsxEl3
  8 => _unwrappedJsxEl4
  9 => _unwrappedJsxEl5
  */
  10);
  let _unwrapped = _$unforgetCache[0].v;
  _unwrapped = useState(0);
  _$unforgetCache[0].e(_unwrapped);
  let state = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n || _unwrapped !== _$unforgetCache[0].v) {
    state = _unwrapped[0];
    _$unforgetCache[1].e(state);
  }
  let setState = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _unwrapped !== _$unforgetCache[0].v) {
    setState = _unwrapped[1];
    _$unforgetCache[2].e(setState);
  }
  if (state !== _$unforgetCache[1].v) {
    if (state % 2 === 1) {
      let _unwrappedJsxEl6 = _$unforgetCache[3].v;
      if (_$unforgetCache[3].n) {
        _unwrappedJsxEl6 = <div>We're inside the early return</div>;
        _$unforgetCache[3].e(_unwrappedJsxEl6);
      }
      _$unforgetCommit();
      return _unwrappedJsxEl6;
    }
  }
  let newValue = _$unforgetCache[4].v;
  if (_$unforgetCache[4].n || state !== _$unforgetCache[1].v) {
    newValue = state + 1;
    _$unforgetCache[4].e(newValue);
  }
  let _unwrappedJsxEl = _$unforgetCache[5].v;
  if (_$unforgetCache[5].n || setState !== _$unforgetCache[2].v || state !== _$unforgetCache[1].v) {
    _unwrappedJsxEl = () => setState(state + 1);
    _$unforgetCache[5].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n || _unwrappedJsxEl !== _$unforgetCache[5].v) {
    _unwrappedJsxEl2 = <button onClick={_unwrappedJsxEl}>Increment</button>;
    _$unforgetCache[6].e(_unwrappedJsxEl2);
  }
  let _unwrappedJsxEl3 = _$unforgetCache[7].v;
  if (_$unforgetCache[7].n || newValue !== _$unforgetCache[4].v) {
    _unwrappedJsxEl3 = <span>Count: {newValue}</span>;
    _$unforgetCache[7].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache[8].v;
  if (_$unforgetCache[8].n || _unwrappedJsxEl3 !== _$unforgetCache[7].v) {
    _unwrappedJsxEl4 = <div>
        {_unwrappedJsxEl3}
      </div>;
    _$unforgetCache[8].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl5 = _$unforgetCache[9].v;
  if (_$unforgetCache[9].n || _unwrappedJsxEl2 !== _$unforgetCache[6].v || _unwrappedJsxEl4 !== _$unforgetCache[8].v) {
    _unwrappedJsxEl5 = <div>
      {_unwrappedJsxEl2}
      {_unwrappedJsxEl4}
    </div>;
    _$unforgetCache[9].e(_unwrappedJsxEl5);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl5;
}"
`;

exports[`Component fixtures applyModification fixture_9 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
const numbers1 = [1, 2, 3, 4, 5, 6, 7, 8, 9];
const numbers2 = numbers1.filter(number => number % 2 === 0);
export default function UserList() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrapped2
  1 => _unwrapped
  2 => numbers
  3 => setNumbers
  4 => filteredNumbers
  5 => currentN
  6 => handleUserClick
  7 => _unwrappedJsxEl
  8 => _unwrappedJsxEl2
  9 => _unwrappedJsxEl3
  10 => _unwrappedJsxEl4
  */
  11);
  let _unwrapped2 = _$unforgetCache[0].v;
  _unwrapped2 = useState(numbers1);
  _$unforgetCache[0].e(_unwrapped2);
  let _unwrapped = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n) {
    _unwrapped = 0;
    _$unforgetCache[1].e(_unwrapped);
  }
  let numbers = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _unwrapped2 !== _$unforgetCache[0].v) {
    numbers = _unwrapped2[0];
    _$unforgetCache[2].e(numbers);
  }
  let setNumbers = _$unforgetCache[3].v;
  if (_$unforgetCache[3].n || _unwrapped2 !== _$unforgetCache[0].v) {
    setNumbers = _unwrapped2[1];
    _$unforgetCache[3].e(setNumbers);
  }
  let filteredNumbers = _$unforgetCache[4].v;
  if (_$unforgetCache[4].n || numbers !== _$unforgetCache[2].v) {
    filteredNumbers = [];
    _$unforgetCache[4].e(filteredNumbers);
  }
  if (numbers !== _$unforgetCache[2].v || _unwrapped !== _$unforgetCache[1].v || filteredNumbers !== _$unforgetCache[4].v) {
    for (let i = _unwrapped; i < numbers.length; i++) {
      let currentN = _$unforgetCache[5].v;
      if (_$unforgetCache[5].n || numbers !== _$unforgetCache[2].v) {
        currentN = numbers[i];
        _$unforgetCache[5].e(currentN);
      }
      if (filteredNumbers !== _$unforgetCache[4].v || currentN !== _$unforgetCache[5].v) {
        if (i % 2 === 0) {
          if (filteredNumbers !== _$unforgetCache[4].v || currentN !== _$unforgetCache[5].v) {
            filteredNumbers.push(currentN);
          }
        }
      }
    }
  }
  let handleUserClick = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n || setNumbers !== _$unforgetCache[3].v) {
    handleUserClick = () => {
      setNumbers(p => numbers1 === p ? numbers2 : numbers1);
    };
    _$unforgetCache[6].e(handleUserClick);
  }
  let _unwrappedJsxEl = _$unforgetCache[7].v;
  if (_$unforgetCache[7].n || handleUserClick !== _$unforgetCache[6].v) {
    _unwrappedJsxEl = <button onClick={handleUserClick}>Toggle even ones</button>;
    _$unforgetCache[7].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[8].v;
  if (_$unforgetCache[8].n || filteredNumbers !== _$unforgetCache[4].v) {
    _unwrappedJsxEl2 = filteredNumbers.map(n => <div key={n}>{n}</div>);
    _$unforgetCache[8].e(_unwrappedJsxEl2);
  }
  let _unwrappedJsxEl3 = _$unforgetCache[9].v;
  if (_$unforgetCache[9].n || _unwrappedJsxEl2 !== _$unforgetCache[8].v) {
    _unwrappedJsxEl3 = <ul>
        {_unwrappedJsxEl2}
      </ul>;
    _$unforgetCache[9].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache[10].v;
  if (_$unforgetCache[10].n || _unwrappedJsxEl !== _$unforgetCache[7].v || _unwrappedJsxEl3 !== _$unforgetCache[9].v) {
    _unwrappedJsxEl4 = <div>
      {_unwrappedJsxEl}
      {_unwrappedJsxEl3}
    </div>;
    _$unforgetCache[10].e(_unwrappedJsxEl4);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl4;
}"
`;

exports[`Component fixtures applyModification fixture_10 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState, useEffect, useMemo, useCallback } from "react";
const fetchUser = async () => {
  const response = await fetch("https://api.github.com/users/mohebifar");
  if (!response.ok) {
    throw new Error("Network response was not ok");
  }
  return await response.json();
};
const fetchUserFollowers = async () => {
  const response = await fetch("https://api.github.com/users/mohebifar/followers");
  if (!response.ok) {
    throw new Error("Network response was not ok");
  }
  return await response.json();
};
function UserList() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrapped2
  1 => _unwrapped
  2 => _unwrapped3
  3 => _unwrapped4
  4 => _unwrapped5
  5 => handleUserClick
  6 => _unwrapped6
  7 => _unwrappedJsxEl
  8 => _unwrappedJsxEl5
  9 => user
  10 => setUser
  11 => followers
  12 => setFollowers
  13 => loading
  14 => setLoading
  15 => error
  16 => setError
  17 => setFilterUsers
  18 => setShouldFilterUsers
  19 => toggleEvenOnes
  20 => memoizedFollowers
  21 => filteredUsers
  22 => user
  23 => usersForUI
  24 => _unwrappedJsxEl2
  25 => userListElement
  26 => _unwrappedJsxEl3
  27 => _unwrappedJsxEl4
  28 => _unwrappedJsxEl6
  29 => _unwrappedJsxEl7
  30 => _unwrappedJsxEl8
  31 => _unwrappedJsxEl9
  32 => _unwrappedJsxEl10
  33 => _unwrappedJsxEl11
  */
  34);
  let _unwrapped2 = _$unforgetCache[0].v;
  _unwrapped2 = useState({});
  _$unforgetCache[0].e(_unwrapped2);
  let _unwrapped = _$unforgetCache[1].v;
  _unwrapped = useState([]);
  _$unforgetCache[1].e(_unwrapped);
  let _unwrapped3 = _$unforgetCache[2].v;
  _unwrapped3 = useState(true);
  _$unforgetCache[2].e(_unwrapped3);
  let _unwrapped4 = _$unforgetCache[3].v;
  _unwrapped4 = useState(null);
  _$unforgetCache[3].e(_unwrapped4);
  let _unwrapped5 = _$unforgetCache[4].v;
  _unwrapped5 = useState(false);
  _$unforgetCache[4].e(_unwrapped5);
  // useCallback to memoize a hypothetical handler function
  let handleUserClick = _$unforgetCache[5].v;

  // without useCallback
  handleUserClick = useCallback(userId => {
    console.log("User clicked:", userId);
    // Handler logic here...
  }, []);
  _$unforgetCache[5].e(handleUserClick);
  let _unwrapped6 = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n) {
    _unwrapped6 = 0;
    _$unforgetCache[6].e(_unwrapped6);
  }
  let _unwrappedJsxEl = _$unforgetCache[7].v;
  if (_$unforgetCache[7].n) {
    _unwrappedJsxEl = <div>Loading...</div>;
    _$unforgetCache[7].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl5 = _$unforgetCache[8].v;
  if (_$unforgetCache[8].n) {
    _unwrappedJsxEl5 = <h1>User List</h1>;
    _$unforgetCache[8].e(_unwrappedJsxEl5);
  }
  let user = _$unforgetCache[9].v;
  if (_$unforgetCache[9].n || _unwrapped2 !== _$unforgetCache[0].v) {
    user = _unwrapped2[0];
    _$unforgetCache[9].e(user);
  }
  let setUser = _$unforgetCache[10].v;
  if (_$unforgetCache[10].n || _unwrapped2 !== _$unforgetCache[0].v) {
    setUser = _unwrapped2[1];
    _$unforgetCache[10].e(setUser);
  }
  let followers = _$unforgetCache[11].v;
  if (_$unforgetCache[11].n || _unwrapped !== _$unforgetCache[1].v) {
    followers = _unwrapped[0];
    _$unforgetCache[11].e(followers);
  }
  let setFollowers = _$unforgetCache[12].v;
  if (_$unforgetCache[12].n || _unwrapped !== _$unforgetCache[1].v) {
    setFollowers = _unwrapped[1];
    _$unforgetCache[12].e(setFollowers);
  }
  let loading = _$unforgetCache[13].v;
  if (_$unforgetCache[13].n || _unwrapped3 !== _$unforgetCache[2].v) {
    loading = _unwrapped3[0];
    _$unforgetCache[13].e(loading);
  }
  let setLoading = _$unforgetCache[14].v;
  if (_$unforgetCache[14].n || _unwrapped3 !== _$unforgetCache[2].v) {
    setLoading = _unwrapped3[1];
    _$unforgetCache[14].e(setLoading);
  }
  let error = _$unforgetCache[15].v;
  if (_$unforgetCache[15].n || _unwrapped4 !== _$unforgetCache[3].v) {
    error = _unwrapped4[0];
    _$unforgetCache[15].e(error);
  }
  let setError = _$unforgetCache[16].v;
  if (_$unforgetCache[16].n || _unwrapped4 !== _$unforgetCache[3].v) {
    setError = _unwrapped4[1];
    _$unforgetCache[16].e(setError);
  }
  let setFilterUsers = _$unforgetCache[17].v;
  if (_$unforgetCache[17].n || _unwrapped5 !== _$unforgetCache[4].v) {
    setFilterUsers = _unwrapped5[0];
    _$unforgetCache[17].e(setFilterUsers);
  }
  let setShouldFilterUsers = _$unforgetCache[18].v;
  if (_$unforgetCache[18].n || _unwrapped5 !== _$unforgetCache[4].v) {
    setShouldFilterUsers = _unwrapped5[1];
    _$unforgetCache[18].e(setShouldFilterUsers);
  }
  useEffect(() => {
    Promise.all([fetchUser(), fetchUserFollowers(), new Promise(resolve => setTimeout(resolve, 2000))]).then(([userData, followersData]) => {
      setFollowers(followersData);
      setUser(userData);
      setLoading(false);
    }).catch(error => {
      setError(error.toString());
      setLoading(false);
    });
  }, []);
  let toggleEvenOnes = _$unforgetCache[19].v;
  if (_$unforgetCache[19].n || setShouldFilterUsers !== _$unforgetCache[18].v) {
    toggleEvenOnes = () => {
      setShouldFilterUsers(prev => !prev);
    };
    _$unforgetCache[19].e(toggleEvenOnes);
  }
  let memoizedFollowers = _$unforgetCache[20].v;
  memoizedFollowers = useMemo(() => followers, [followers]);
  _$unforgetCache[20].e(memoizedFollowers);
  let filteredUsers = _$unforgetCache[21].v;
  if (_$unforgetCache[21].n || memoizedFollowers !== _$unforgetCache[20].v) {
    filteredUsers = [];
    _$unforgetCache[21].e(filteredUsers);
  }
  if (memoizedFollowers !== _$unforgetCache[20].v || _unwrapped6 !== _$unforgetCache[6].v || filteredUsers !== _$unforgetCache[21].v) {
    for (let i = _unwrapped6; i < memoizedFollowers.length; i++) {
      let user = _$unforgetCache[22].v;
      if (_$unforgetCache[22].n || memoizedFollowers !== _$unforgetCache[20].v) {
        user = memoizedFollowers[i];
        _$unforgetCache[22].e(user);
      }
      if (filteredUsers !== _$unforgetCache[21].v || user !== _$unforgetCache[22].v) {
        if (i % 2 === 0) {
          if (filteredUsers !== _$unforgetCache[21].v || user !== _$unforgetCache[22].v) {
            filteredUsers.push(user);
          }
        }
      }
    }
  }
  let usersForUI = _$unforgetCache[23].v;

  // Early return for loading state
  if (_$unforgetCache[23].n || setFilterUsers !== _$unforgetCache[17].v || filteredUsers !== _$unforgetCache[21].v || memoizedFollowers !== _$unforgetCache[20].v) {
    usersForUI = setFilterUsers ? filteredUsers : memoizedFollowers;
    _$unforgetCache[23].e(usersForUI);
  }
  if (loading !== _$unforgetCache[13].v || _unwrappedJsxEl !== _$unforgetCache[7].v) {
    if (loading) {
      _$unforgetCommit();
      return _unwrappedJsxEl;
    }

    // Early return for error state
  }
  let _unwrappedJsxEl2 = _$unforgetCache[24].v;
  if (_$unforgetCache[24].n || error !== _$unforgetCache[15].v) {
    _unwrappedJsxEl2 = <div>Error: {error}</div>;
    _$unforgetCache[24].e(_unwrappedJsxEl2);
  }
  if (error !== _$unforgetCache[15].v || _unwrappedJsxEl2 !== _$unforgetCache[24].v) {
    if (error) {
      _$unforgetCommit();
      return _unwrappedJsxEl2;
    }
  }
  let userListElement = _$unforgetCache[25].v;
  if (_$unforgetCache[25].n || usersForUI !== _$unforgetCache[23].v) {
    userListElement = usersForUI.map(follower => <UserListItem key={follower.id} user={follower} />);
    _$unforgetCache[25].e(userListElement);
  }
  let _unwrappedJsxEl3 = _$unforgetCache[26].v;
  if (_$unforgetCache[26].n || user !== _$unforgetCache[9].v) {
    _unwrappedJsxEl3 = user.name;
    _$unforgetCache[26].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache[27].v;
  if (_$unforgetCache[27].n || _unwrappedJsxEl3 !== _$unforgetCache[26].v) {
    _unwrappedJsxEl4 = <h1>Follwers of {_unwrappedJsxEl3}</h1>;
    _$unforgetCache[27].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl6 = _$unforgetCache[28].v;
  if (_$unforgetCache[28].n || setFilterUsers !== _$unforgetCache[17].v) {
    _unwrappedJsxEl6 = setFilterUsers && "Show Odd";
    _$unforgetCache[28].e(_unwrappedJsxEl6);
  }
  let _unwrappedJsxEl7 = _$unforgetCache[29].v;
  if (_$unforgetCache[29].n || setFilterUsers !== _$unforgetCache[17].v) {
    _unwrappedJsxEl7 = !setFilterUsers && "Show Even";
    _$unforgetCache[29].e(_unwrappedJsxEl7);
  }
  let _unwrappedJsxEl8 = _$unforgetCache[30].v;
  if (_$unforgetCache[30].n || toggleEvenOnes !== _$unforgetCache[19].v || setFilterUsers !== _$unforgetCache[17].v || _unwrappedJsxEl6 !== _$unforgetCache[28].v || _unwrappedJsxEl7 !== _$unforgetCache[29].v) {
    _unwrappedJsxEl8 = <button onClick={toggleEvenOnes}>
        {setFilterUsers ? _unwrappedJsxEl6 : _unwrappedJsxEl7}
      </button>;
    _$unforgetCache[30].e(_unwrappedJsxEl8);
  }
  let _unwrappedJsxEl9 = _$unforgetCache[31].v;
  if (_$unforgetCache[31].n || handleUserClick !== _$unforgetCache[5].v || user !== _$unforgetCache[9].v) {
    _unwrappedJsxEl9 = () => handleUserClick(user.id);
    _$unforgetCache[31].e(_unwrappedJsxEl9);
  }
  let _unwrappedJsxEl10 = _$unforgetCache[32].v;
  if (_$unforgetCache[32].n || _unwrappedJsxEl9 !== _$unforgetCache[31].v || userListElement !== _$unforgetCache[25].v) {
    _unwrappedJsxEl10 = <ul onClick={_unwrappedJsxEl9}>{userListElement}</ul>;
    _$unforgetCache[32].e(_unwrappedJsxEl10);
  }
  let _unwrappedJsxEl11 = _$unforgetCache[33].v;
  if (_$unforgetCache[33].n || _unwrappedJsxEl4 !== _$unforgetCache[27].v || _unwrappedJsxEl5 !== _$unforgetCache[8].v || _unwrappedJsxEl8 !== _$unforgetCache[30].v || _unwrappedJsxEl10 !== _$unforgetCache[32].v) {
    _unwrappedJsxEl11 = <div>
      {_unwrappedJsxEl4}
      {_unwrappedJsxEl5}
      {_unwrappedJsxEl8}
      {_unwrappedJsxEl10}
    </div>;
    _$unforgetCache[33].e(_unwrappedJsxEl11);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl11;
}
function UserListItem(_props) {
  const [_$unforgetCache2, _$unforgetCommit2, _$unforgetNull2] = useCreateCache$unforget(
  /*
  0 => _props
  1 => _unwrappedJsxEl12
  2 => _unwrappedJsxEl13
  3 => login
  4 => avatar_url
  5 => html_url
  6 => _unwrappedJsxEl14
  7 => _unwrappedJsxEl15
  8 => _unwrappedJsxEl16
  */
  9);
  let _unwrappedJsxEl12 = _$unforgetCache2[1].v;
  if (_$unforgetCache2[1].n) {
    _unwrappedJsxEl12 = {
      display: "flex",
      alignItems: "center",
      justifyContent: "space-between",
      gap: 10,
      marginBottom: 10
    };
    _$unforgetCache2[1].e(_unwrappedJsxEl12);
  }
  let _unwrappedJsxEl13 = _$unforgetCache2[2].v;
  if (_$unforgetCache2[2].n) {
    _unwrappedJsxEl13 = {
      width: 100,
      height: 100,
      borderRadius: 20
    };
    _$unforgetCache2[2].e(_unwrappedJsxEl13);
  }
  _$unforgetCache2[0].e(_props);
  let login = _$unforgetCache2[3].v;
  if (_$unforgetCache2[3].n || _props !== _$unforgetCache2[0].v) {
    login = _props.user.login;
    _$unforgetCache2[3].e(login);
  }
  let avatar_url = _$unforgetCache2[4].v;
  if (_$unforgetCache2[4].n || _props !== _$unforgetCache2[0].v) {
    avatar_url = _props.user.avatar_url;
    _$unforgetCache2[4].e(avatar_url);
  }
  let html_url = _$unforgetCache2[5].v;
  if (_$unforgetCache2[5].n || _props !== _$unforgetCache2[0].v) {
    html_url = _props.user.html_url;
    _$unforgetCache2[5].e(html_url);
  }
  let _unwrappedJsxEl14 = _$unforgetCache2[6].v;
  if (_$unforgetCache2[6].n || _unwrappedJsxEl13 !== _$unforgetCache2[2].v || avatar_url !== _$unforgetCache2[4].v || login !== _$unforgetCache2[3].v) {
    _unwrappedJsxEl14 = <img style={_unwrappedJsxEl13} src={avatar_url} alt={login} />;
    _$unforgetCache2[6].e(_unwrappedJsxEl14);
  }
  let _unwrappedJsxEl15 = _$unforgetCache2[7].v;
  if (_$unforgetCache2[7].n || html_url !== _$unforgetCache2[5].v || login !== _$unforgetCache2[3].v) {
    _unwrappedJsxEl15 = <a href={html_url}>{login}</a>;
    _$unforgetCache2[7].e(_unwrappedJsxEl15);
  }
  let _unwrappedJsxEl16 = _$unforgetCache2[8].v;
  if (_$unforgetCache2[8].n || _unwrappedJsxEl12 !== _$unforgetCache2[1].v || _unwrappedJsxEl14 !== _$unforgetCache2[6].v || _unwrappedJsxEl15 !== _$unforgetCache2[7].v) {
    _unwrappedJsxEl16 = <li style={_unwrappedJsxEl12}>
      {_unwrappedJsxEl14}
      {_unwrappedJsxEl15}
    </li>;
    _$unforgetCache2[8].e(_unwrappedJsxEl16);
  }
  _$unforgetCommit2();
  return _unwrappedJsxEl16;
}
export default UserList;"
`;

exports[`Component fixtures applyModification fixture_11 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
export default function App() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => a
  1 => b
  2 => _unwrappedJsxEl
  3 => _unwrappedJsxEl2
  */
  4);
  let a = _$unforgetCache[0].v;
  if (_$unforgetCache[0].n) {
    a = [];
    _$unforgetCache[0].e(a);
  }
  if (a !== _$unforgetCache[0].v) {
    a.push(1);
  }
  let b = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n || a !== _$unforgetCache[0].v) {
    b = a;
    _$unforgetCache[1].e(b);
  }
  if (b !== _$unforgetCache[1].v) {
    b.push(2);
  }
  let _unwrappedJsxEl = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || a !== _$unforgetCache[0].v) {
    _unwrappedJsxEl = a[1];
    _$unforgetCache[2].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[3].v;
  if (_$unforgetCache[3].n || _unwrappedJsxEl !== _$unforgetCache[2].v) {
    _unwrappedJsxEl2 = <div>{_unwrappedJsxEl}</div>;
    _$unforgetCache[3].e(_unwrappedJsxEl2);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl2;
}"
`;

exports[`Component fixtures applyModification fixture_12 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
function Comp(_props) {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _props
  1 => a
  2 => b
  3 => x
  4 => y
  5 => _unwrappedJsxEl
  6 => _unwrappedJsxEl2
  */
  7);
  _$unforgetCache[0].e(_props);
  let a = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n || _props !== _$unforgetCache[0].v) {
    a = _props.a;
    _$unforgetCache[1].e(a);
  }
  let b = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _props !== _$unforgetCache[0].v) {
    b = _props.b;
    _$unforgetCache[2].e(b);
  }
  let x = _$unforgetCache[3].v;
  if (_$unforgetCache[3].n || a !== _$unforgetCache[1].v || b !== _$unforgetCache[2].v) {
    x = [];
    _$unforgetCache[3].e(x);
  }
  if (x !== _$unforgetCache[3].v || a !== _$unforgetCache[1].v) {
    x.push(a);
  }
  let y = _$unforgetCache[4].v;
  if (_$unforgetCache[4].n || x !== _$unforgetCache[3].v || b !== _$unforgetCache[2].v) {
    y = x;
    _$unforgetCache[4].e(y);
  }
  if (y !== _$unforgetCache[4].v || b !== _$unforgetCache[2].v) {
    y.push(b);
  }
  let _unwrappedJsxEl = _$unforgetCache[5].v;
  if (_$unforgetCache[5].n || x !== _$unforgetCache[3].v) {
    _unwrappedJsxEl = x.join(",");
    _$unforgetCache[5].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n || _unwrappedJsxEl !== _$unforgetCache[5].v) {
    _unwrappedJsxEl2 = <div>n: {_unwrappedJsxEl}</div>;
    _$unforgetCache[6].e(_unwrappedJsxEl2);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl2;
}
export default function App() {
  const [_$unforgetCache2, _$unforgetCommit2, _$unforgetNull2] = useCreateCache$unforget(
  /*
  0 => _unwrapped
  1 => state
  2 => setState
  3 => _unwrappedJsxEl3
  4 => _unwrappedJsxEl4
  5 => _unwrappedJsxEl5
  6 => _unwrappedJsxEl6
  */
  7);
  let _unwrapped = _$unforgetCache2[0].v;
  _unwrapped = useState(2);
  _$unforgetCache2[0].e(_unwrapped);
  let state = _$unforgetCache2[1].v;
  if (_$unforgetCache2[1].n || _unwrapped !== _$unforgetCache2[0].v) {
    state = _unwrapped[0];
    _$unforgetCache2[1].e(state);
  }
  let setState = _$unforgetCache2[2].v;
  if (_$unforgetCache2[2].n || _unwrapped !== _$unforgetCache2[0].v) {
    setState = _unwrapped[1];
    _$unforgetCache2[2].e(setState);
  }
  let _unwrappedJsxEl3 = _$unforgetCache2[3].v;
  if (_$unforgetCache2[3].n || state !== _$unforgetCache2[1].v) {
    _unwrappedJsxEl3 = <Comp a={3} b={state} />;
    _$unforgetCache2[3].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache2[4].v;
  if (_$unforgetCache2[4].n || setState !== _$unforgetCache2[2].v) {
    _unwrappedJsxEl4 = () => setState(p => p + 1);
    _$unforgetCache2[4].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl5 = _$unforgetCache2[5].v;
  if (_$unforgetCache2[5].n || _unwrappedJsxEl4 !== _$unforgetCache2[4].v) {
    _unwrappedJsxEl5 = <button onClick={_unwrappedJsxEl4}>click</button>;
    _$unforgetCache2[5].e(_unwrappedJsxEl5);
  }
  let _unwrappedJsxEl6 = _$unforgetCache2[6].v;
  if (_$unforgetCache2[6].n || _unwrappedJsxEl3 !== _$unforgetCache2[3].v || _unwrappedJsxEl5 !== _$unforgetCache2[5].v) {
    _unwrappedJsxEl6 = <div>
      {_unwrappedJsxEl3}
      {_unwrappedJsxEl5}
    </div>;
    _$unforgetCache2[6].e(_unwrappedJsxEl6);
  }
  _$unforgetCommit2();
  return _unwrappedJsxEl6;
}"
`;

exports[`Component fixtures applyModification fixture_13 1`] = `
"import { useCreateCache$unforget } from "@react-unforget/runtime";
import { useState } from "react";
export default function CounterWithMutationTracking() {
  const [_$unforgetCache, _$unforgetCommit, _$unforgetNull] = useCreateCache$unforget(
  /*
  0 => _unwrapped
  1 => _unwrappedJsxEl5
  2 => state
  3 => setState
  4 => x
  5 => z
  6 => y
  7 => _unwrappedJsxEl
  8 => _unwrappedJsxEl2
  9 => _unwrappedJsxEl3
  10 => _unwrappedJsxEl4
  11 => _unwrappedJsxEl6
  12 => _unwrappedJsxEl7
  13 => _unwrappedJsxEl8
  */
  14);
  let _unwrapped = _$unforgetCache[0].v;
  _unwrapped = useState(0);
  _$unforgetCache[0].e(_unwrapped);
  let _unwrappedJsxEl5 = _$unforgetCache[1].v;
  if (_$unforgetCache[1].n) {
    _unwrappedJsxEl5 = <br />;
    _$unforgetCache[1].e(_unwrappedJsxEl5);
  }
  let state = _$unforgetCache[2].v;
  if (_$unforgetCache[2].n || _unwrapped !== _$unforgetCache[0].v) {
    state = _unwrapped[0];
    _$unforgetCache[2].e(state);
  }
  let setState = _$unforgetCache[3].v;
  if (_$unforgetCache[3].n || _unwrapped !== _$unforgetCache[0].v) {
    setState = _unwrapped[1];
    _$unforgetCache[3].e(setState);
  }
  let x = _$unforgetCache[4].v;
  if (_$unforgetCache[4].n || state !== _$unforgetCache[2].v) {
    x = [];
    _$unforgetCache[4].e(x);
  }
  let z = _$unforgetCache[5].v;
  if (_$unforgetCache[5].n || state !== _$unforgetCache[2].v) {
    z = [];
    _$unforgetCache[5].e(z);
  }
  let y = _$unforgetCache[6].v;
  if (_$unforgetCache[6].n || state !== _$unforgetCache[2].v || x !== _$unforgetCache[4].v || z !== _$unforgetCache[5].v) {
    y = state % 2 === 0 ? x : z;
    _$unforgetCache[6].e(y);
  }
  if (y !== _$unforgetCache[6].v || state !== _$unforgetCache[2].v) {
    y.push(state);
  }
  let _unwrappedJsxEl = _$unforgetCache[7].v;
  if (_$unforgetCache[7].n || setState !== _$unforgetCache[3].v || state !== _$unforgetCache[2].v) {
    _unwrappedJsxEl = () => setState(state + 1);
    _$unforgetCache[7].e(_unwrappedJsxEl);
  }
  let _unwrappedJsxEl2 = _$unforgetCache[8].v;
  if (_$unforgetCache[8].n || _unwrappedJsxEl !== _$unforgetCache[7].v) {
    _unwrappedJsxEl2 = <button onClick={_unwrappedJsxEl}>Increment</button>;
    _$unforgetCache[8].e(_unwrappedJsxEl2);
  }
  let _unwrappedJsxEl3 = _$unforgetCache[9].v;
  if (_$unforgetCache[9].n || y !== _$unforgetCache[6].v) {
    _unwrappedJsxEl3 = y[0];
    _$unforgetCache[9].e(_unwrappedJsxEl3);
  }
  let _unwrappedJsxEl4 = _$unforgetCache[10].v;
  if (_$unforgetCache[10].n || x !== _$unforgetCache[4].v) {
    _unwrappedJsxEl4 = JSON.stringify(x);
    _$unforgetCache[10].e(_unwrappedJsxEl4);
  }
  let _unwrappedJsxEl6 = _$unforgetCache[11].v;
  if (_$unforgetCache[11].n || y !== _$unforgetCache[6].v) {
    _unwrappedJsxEl6 = JSON.stringify(y);
    _$unforgetCache[11].e(_unwrappedJsxEl6);
  }
  let _unwrappedJsxEl7 = _$unforgetCache[12].v;
  if (_$unforgetCache[12].n || _unwrappedJsxEl4 !== _$unforgetCache[10].v || _unwrappedJsxEl5 !== _$unforgetCache[1].v || _unwrappedJsxEl6 !== _$unforgetCache[11].v) {
    _unwrappedJsxEl7 = <p data-testid="output-printer">
        x: {_unwrappedJsxEl4}
        {_unwrappedJsxEl5}
        y: {_unwrappedJsxEl6}
      </p>;
    _$unforgetCache[12].e(_unwrappedJsxEl7);
  }
  let _unwrappedJsxEl8 = _$unforgetCache[13].v;
  if (_$unforgetCache[13].n || _unwrappedJsxEl2 !== _$unforgetCache[8].v || _unwrappedJsxEl3 !== _$unforgetCache[9].v || _unwrappedJsxEl7 !== _$unforgetCache[12].v) {
    _unwrappedJsxEl8 = <div>
      {_unwrappedJsxEl2}
      {_unwrappedJsxEl3}
      {_unwrappedJsxEl7}
    </div>;
    _$unforgetCache[13].e(_unwrappedJsxEl8);
  }
  _$unforgetCommit();
  return _unwrappedJsxEl8;
}"
`;
